<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hastavakta</string>
    <string name="detect_sign">Sign Detection</string>
    <string name="reverse_sign">Text to Sign</string>
    <string name="start_detection">Start Detection</string>
    <string name="stop_detection">Stop Detection</string>
    <string name="detected_text">Detected Text:</string>
    <string name="enter_text">Enter text to convert to sign</string>
    <string name="convert">Convert to Sign</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="welcome_message">Welcome to Hastavakta</string>
    <string name="tagline">Your Personal World Communication App</string>
    <string name="user_question">Are you a sign language user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="speak_sentence">Speak Sentence</string>
    <string-array name="sign_language_signs">
    <item>hello</item>
    <item>i love you</item>
    <item>thanks</item>
</string-array>
    <string name="sign_image_desc">Image showing a sign language gesture</string>
</resources>