<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Splash Screen View -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="#3F51B5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/taglineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tagline"
                android:textSize="18sp"
                android:textColor="#757575"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <!-- User Type Question View -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/questionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/user_question"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:padding="16dp"
                android:text="@string/yes"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionText" />

            <Button
                android:id="@+id/noButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:padding="16dp"
                android:text="@string/no"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yesButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>